--- a/channel-partner.html
+++ b/channel-partner.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="channel_partner_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>CHANNEL PARTNER</h1>
             </div>
         </div>
     </section>
@@ -96,29 +96,90 @@
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Secure Deliveries</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Medical supplies</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Fast and Reliable</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
+                    <h3>Deliver Exact Parcels Globally With the Best Courier Channel Partners in Dubai</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        INC Express is the best courier channel partner for faster, more secure, and more reliable
+                        delivery services for our customers. Every day, we collect hundreds of parcels and deliver them
+                        through transport. From packages to consignments of every size, weight, and shape, we deliver
+                        parcels globally.
+                        We empower businesses that principally work business-to-business and need to keep clients and
+                        partners in the right supply of goods at the right time. We also help consumer-facing businesses
+                        keep their distribution centers and outlets stocked. We even guarantee that their end clients
+                        always receive quality deliveries that go well with the brand values from which they have
+                        purchased.
                     </p>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We even offer overnight secure delivery services of documents and medical supplies, making us
+                        industry pioneers for serving them in emergencies.
                     </p>
                 </div>
             </div>
         </div>
+    </section>
+
+
+
+
+
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>Couriers Are Made Swiftly, Securely, and Always With Precision
+            At INC Express</h3>
+        <p>
+            We at INC Express believe that courier services are all about serving consumer's needs on time and
+            precisely. From the day when we started working in this industry, we always thought of being helpful,
+            attentive to detail, and superior courier service. The name we have earned for ourselves is all through
+            meeting the exact demands of our clients.
+        </p>
+        <p>
+            No matter what kind of delivery need you have, we can make your delivery needs happen into reality without
+            any failure. We always deal with people transparently and using the latest trucks, advanced systems, and
+            communication methods.It is why manufacturers, vendors, and partners choose us to deliver their goods:
+            always get swift, secure, and faster delivery services
+        </p>
+        <h3>How We Fulfill The Goals Of Businesses Being The Leading Channel Partners?</h3>
+        <p>
+            INC Express is a leading courier channel partner based in the UAE. Specializing in courier deliveries, we
+            mainly aim to transport goods and items worldwide with our global delivery support network.
+        </p>
+        <p>
+            Fulfilling the goals of businesses as a leading channel partner involves a strategic approach. It is why we
+            always focus on driving business growth and assisting them in increasing revenue, besides delivering value
+            to businesses that have trusted us as a channel partner.
+        </p>
+        <p>
+            INC Express is committed to providing fast, efficient, reliable, and exceptional cargo and courier service.
+            We also enable them to ship, track, and organize delivery through tracking ID and digital platforms.
+        </p>
+        <p>
+            In addition, by providing complete training and support to our sales and marketing teams, we ensure they
+            thoroughly understand the products or services you want to courier. Also, our excellent customer support
+            team is dedicated to ensuring complete customer satisfaction by addressing customer inquiries, issues, and
+            concerns promptly and professionally.
+        </p>
+        <h3>What Are Our USP To Success?</h3>
+        <p>
+            When choosing affordable courier channel partners in Dubai, the services of INC Express are unbeatable. Our
+            international courier service offers pick-up and drop facilities for your couriers or parcels to any part of
+            the UAE and anywhere in the World. This service is further augmented by our superior and existing
+            infrastructures and facilities, which are available at our disposal throughout the regions to ensure a
+            seamless process.
+        </p>
     </section>
 
 
@@ -131,63 +192,79 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Protection </h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        First and foremost, we focus on protecting goods in transit and take all the necessary steps to
+                        avoid damage. Considering the nature of the route, infrastructure, other impacts, or any kind of
+                        accidents and protecting against different elements like humidity, excessive temperatures, or
+                        heavy weather, we ensure that the goods reach their destination safely.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Versatility</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We consider multiple stages during the transit before the product reaches its final destination.
+                        These include - multiple off-loading, re-packaging, re-loading, and possibly storage of the
+                        product(s) if required due to any mishap. We complete our work with versatility, allowing us to
+                        be the industry's first choice when choosing channel partners
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Customized Solutions</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We offer customized shipping solutions always. After confirming the consumers' orders, we check
+                        and match the product's type, size, and dimensions to make an error-free delivery on time. We
+                        even focus on the packaging, which is done securely. Hence, it becomes easy to handle, and the
+                        damage risk also gets almost zero.
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
+            <!-- <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
                     <p>
                         xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
 
 
     <section class="service_sub_paragaphs animate fadeInUp">
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+        <h3>What Makes Us the Best Choice for Courier Channel Partners?</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            Having a reputation as the top courier channel partner in Dubai, we at INC Express eliminate all the
+            barriers industries face in shipment and delivery. We also aim to connect with global business partners who
+            usually require an express delivery network.
+            Having a dedicated and highly experienced customer service team, we always emphasize providing the best
+            quality service to all our customers and enhancing customer experience. With our services, you can receive
+            completely hassle-free courier services all around the globe.
         </p>
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            INC Express creates innovative and advanced eCommerce shipping solutions so businesses can accomplish the
+            best solutions and fulfill their needs. With a few points of contact and a robust lineup of different
+            tech-enabled assets, we offer businesses complete end-to-end solutions according to their shipping needs.
         </p>
     </section>
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 333.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_11">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Edge Over Competitors </h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We offer omnichannel support, same-day deliveries, and an exceptional shipping experience
+                            that helps us to stay ahead of the competition and gain a significant advantage.
                         </p>
                     </div>
                 </div>
@@ -195,9 +272,11 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Uplift Customer
+                            Experience</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We offer our customers a branded tracking experience and real-time delivery updates. These
+                            help them in escalations and in receiving an upgraded customer experience.
                         </p>
                     </div>
                 </div>
@@ -205,32 +284,28 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Business Advantages</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            By lowering the shipping expense, we can even assist businesses in achieving a higher
+                            revenue potential. Our experience makes it easy for businesses to get the best shipping
+                            services worldwide.
                         </p>
                     </div>
                 </div>
             </div>
 
             <div class="col-xl-4 col-lg-4 col-md-0 col-sm-0 col-0 animate fadeInUp"></div>
+            <div class="col-xl-4 col-lg-4 col-md-0 col-sm-0 col-0 animate fadeInUp"></div>
 
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Technology and
+                            Networking</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
-                        <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Leveraging the AI, ML, and automation processes, we are one of the best courier channel
+                            partners in Dubai. Our delivery network is also spread worldwide, which can help you expand
+                            your business reach profoundly.
                         </p>
                     </div>
                 </div>
