--- a/dangerous-goods.html
+++ b/dangerous-goods.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="dangerous_goods_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>DANGEROUS GOODS</h1>
             </div>
         </div>
     </section>
@@ -96,29 +96,62 @@
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Safety</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Effective Handling</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Secure Packaging</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
+                    <h3>
+                        Make Your Business Easier Than Ever With Our Safely Dangerous Goods & Prohibited Items shipping
+                    </h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Shipping hazardous goods can be a challenging task when moving them within a country. The
+                        difficulty increases when running operations on a global scale. Shipping hazardous goods
+                        internationally includes following an exclusive set of rules and regulations. Different types of
+                        hazardous items need definite specifications, and each country maintains its policies involving
+                        dangerous materials. These goods can include a wide range of items, including lithium batteries,
+                        battery-operated devices, aerosols, oxygen cylinders, and flammable materials. Further, we will
+                        discuss the specific regulations and details regarding the shipping of hazardous goods.
                     </p>
                 </div>
             </div>
         </div>
+    </section>
+
+
+
+
+
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>Dangerous Goods: An Overview</h3>
+        <p>
+            Dangerous goods are substances or items that are a threat to safety, health, the environment, or property
+            during shipping. It is essential to manage such goods with extreme care from the beginning to the end of the
+            shipping process.
+            These goods can come in various forms, such as solids, liquids, or gases, and may include corrosive
+            materials or everyday items like perfumes. Tank containers are commonly used for transporting dangerous
+            goods, as they offer both safety during transportation and the ability to transport large quantities by
+            loading them.
+            It is necessary to select the Hazardous/Dangerous goods shipping services Dubai with all the necessary
+            arrangements.
+        </p>
+        <h3>Guide To Ship The Hazardous Goods Safely:</h3>
+        <p>
+            The safe transport of dangerous goods depends on accurately categorizing and identifying them based on their
+            specific hazards. It includes flammability, toxicity, explosiveness, and more. Below is a comprehensive
+            guide on how to ship these hazardous materials securely.
+        </p>
     </section>
 
 
@@ -131,33 +164,66 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Keep Complete Knowledge Of
+                        Rules And Regulations</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        You must understand and obey the regulations for transporting hazardous goods. The regulations
+                        might differ depending on the specific type of hazardous goods that your company is shipping.
+                        Companies like INC Express Shipping LLC follow all regulations involving requirements for
+                        documentation, packaging, marking, and labeling of the goods.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Information Regarding The Container</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Special containers are necessary for transporting dangerous goods and cannot be transported in
+                        regular containers. Thus, it is important to select either ISO tank containers or choose from
+                        various intermodal tank types for hazardous items shipping services In Dubai. If you are looking
+                        to purchase or lease containers, you can easily explore the container options that best suit
+                        your company's needs.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Classification Of Cargo Shipping</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        The responsibility of categorizing and labeling hazardous materials is according to the
+                        consignor or shipper. It is important to guarantee that those handling the goods are
+                        well-informed about their potential risks.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Trained Personnel</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        The team involved in the transportation of hazardous materials must have the proper training for
+                        safe handling of dangerous goods. You can hire a professional individual or company to handle
+                        the preparation and shipment of these materials on behalf of your company.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
+                <div class="service_sub_sec2_card1">
+                    <h3>Packaging</h3>
+                    <p>
+                        Packaging of dangerous goods & prohibited items shippingis essential for ensuring secure
+                        transportation. To guarantee safety, your company must avoid improper packing containers.
+                        Additionally, special materials such as tape, zip ties, and poly bags are often needed to pack
+                        dangerous goods securely. Also, the containers must be labeled with the country specification
+                        markings.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
+                <div class="service_sub_sec2_card2">
+                    <h3>Document Handling</h3>
+                    <p>
+                        The company should ensure the correct labeling of hazardous goods. Additionally, it is important
+                        to remove old labels from reused boxes and also to keep all essential documents well-maintained.
                     </p>
                 </div>
             </div>
@@ -167,27 +233,28 @@
 
 
     <section class="service_sub_paragaphs animate fadeInUp">
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+        <h3>Important Documents For Shipping Hazardous Goods</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            Shipping different types of hazardous goods across international borders can prove to be a challenging task
+            due to the extensive range of classes, sub-classes, and divisions. To ensure hassle-free custom clearance at
+            ports, your company must keep certain essential documents. Here are the details:
         </p>
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-        <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        </p>
+
     </section>
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 392.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_13">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Data Sheet</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            The MSDS (material safety data sheet) includes information regarding the potential dangers
+                            present and provides instructions to handle the hazardous material safely during
+                            transportation.
                         </p>
                     </div>
                 </div>
@@ -195,9 +262,12 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Transportation
+                            Emergency Card</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            A transportation card for hazardous materials provides guidelines for the safe handling and
+                            transportation of dangerous substances. The team involved in the handling of such goods is
+                            necessary to keep and carry this card.
                         </p>
                     </div>
                 </div>
@@ -205,9 +275,11 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Declaration</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            A declaration for dangerous goods (DGD) provides information about the type of hazardous
+                            substances which is under transportation. Additionally, it has identification symbols that
+                            describe the specific packaging measures and identify the necessary labels.
                         </p>
                     </div>
                 </div>
@@ -218,9 +290,11 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Packaging
+                            Certification</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            This document has the container's identification number and confirms that the packaging of
+                            hazardous materials is according to the provided instructions.
                         </p>
                     </div>
                 </div>
@@ -228,14 +302,31 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Goods Manifestation</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            The primary aim of a dangerous goods manifest (DGM) is to establish all essential details,
+                            including the hazardous material, in a single document.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+
+
+
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>Conclusion</h3>
+        <p>
+            There are several factors to keep in mind when shipping dangerous goods and selecting hazardous/dangerous
+            goods shipping services Dubai. By conducting proper research, using secure packaging, completing
+            documentation accurately, and applying the correct labels, you can minimize any issues or delays when
+            transporting shipments that contain hazardous substances. Connect to INC Express Shipping LLC, which follows
+            all the rules and regulations to transport such goods safely and securely.
+        </p>
+
     </section>
 
 
