--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="pharma_shipment_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>PHARMA SHIPMENT HANDLING</h1>
             </div>
         </div>
     </section>
@@ -96,29 +96,79 @@
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Process Of Pharmaceutical Shipping</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Essential Rules And Regulations For Pharmaceutical Shipping</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
                         <img src="img/plane.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Protection Guidelines To Manage Pharma Shipping</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Transporting pharmaceuticals safely needs high level of expertise. It is important to maintain
+                        the reliability and quality of pharmaceutical products in the shipping process. Both the
+                        pharmaceutical industry and the shipping industry must follow the strict regulations. It is
+                        important to have a complete understanding of the rules for pharmaceutical shipping service
+                        Dubai and to comply with them consistently. Most pharmaceutical shipments require careful
+                        management of the cold chain, as temperature control is crucial for these products. Let us
+                        discuss more about the details of pharmaceutical shipping.
                     </p>
                 </div>
             </div>
         </div>
+    </section>
+
+
+
+
+
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>Process Of Pharmaceutical Shipping:</h3>
+        <p>
+            Pharmaceutical products are commonly transported in refrigerated containers known as offshore reefers. These
+            reefers are regularly examined to ensure they are in suitable condition to keep the medicinal inventory at
+            the appropriate temperatures.
+        </p>
+        <p>
+            The transportation takes place with an agreement with strict regulations, which is important in
+            pharmaceutical logistics. It is to ensure the safe delivery of drugs and vaccines without them spoiling or
+            losing their efficiency.
+        </p>
+        <p>
+            However, managing the pharmaceutical supply chain is extremely challenging as transporters must observe cold
+            chain procedures, prevent theft during transit, and take extra precautions when handling specialized
+            pharmaceutical products. The shipping procedures for pharmaceuticals are highly important, for mishandling
+            deliveries can risk the health of many individuals.
+        </p>
+
+        <h3>Essential Rules And Regulations For Pharmaceutical Shipping</h3>
+        <p>
+            To ensure agreement with pharma shipment handling in Dubai, it is essential to meet the requirements of both
+            manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's Code
+            of Federal Regulations.
+            This code provides thorough instructions on the proper handling, temperature control, and documentation of
+            pharmaceutical products. Its role is to maintain high-quality and safe standards for all drugs and vaccines.
+            Additionally, the World Health Organization has established standardized international guidelines for
+            packing and shipping pharmaceutical products, including vaccines. These procedures cover various aspects,
+            such as insulated packing requirements and the submission of vaccine arrival reports.
+        </p>
+
+        <h3>Protection Guidelines To Manage Pharma Shipping</h3>
+        <p>
+            The FDA and WHO have established regulations and guidelines to ensure the safe handling of pharmaceutical
+            products during transportation. It is important to follow these rules and take necessary precautions to
+            protect the products and minimize the risk of damage. By integrating cold chain pharma logistics and
+            optimizing the supply chain, protect the products and decrease the likelihood of any harm occurring during
+            transit. Here are some tips:
+        </p>
     </section>
 
 
@@ -131,33 +181,26 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Cold Chain Protection</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Cold chain shipping methods include the use of refrigerated trucks and cold storage facilities
+                        at every stage of the shipping process to ensure the safe and reliable transportation of
+                        pharmaceutical products.
+                        It typically includes manufacturing and packaging, transporting in refrigerated trucks, storing
+                        in refrigerated warehouses, and finally, distributing the drugs or vaccines at their intended
+                        location. It is important to maintain the cold chain throughout the entire journey in UAE pharma
+                        shipments, from loading at the factory to unloading and delivery.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Supply Chain Optimization</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
-                <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
-                <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        To maintain the safety of pharmaceutical products during transportation, it is essential to
+                        streamline the supply chain by minimizing transfers and ensuring appropriate storage conditions.
+                        To meet these criteria, pharmaceutical transport companies use a practice called cold chain
+                        shipping or cold chain pharma logistics.
                     </p>
                 </div>
             </div>
@@ -167,27 +210,30 @@
 
 
     <section class="service_sub_paragaphs animate fadeInUp">
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+        <h3>Benefits Of Using Professional Services For Pharma Shipping</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        </p>
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-        <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            The pharmaceutical transport company manages the challenging responsibilities of temperature control,
+            security, shipping regulations, and logistics management. With a proficient team specialized in transporting
+            drugs and vaccines, you'll experience the following advantages:
         </p>
     </section>
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 393.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_14">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Maintains The
+                            Temperature</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Reefer trucks used for shipping perishable items like medications can maintain a specific
+                            temperature during the entire shipping process. These trucks can handle large quantities of
+                            pharmaceutical goods and keep the temperature within fixed specifications, regardless of the
+                            outside weather conditions. Drivers are able to monitor and record the temperature during
+                            transport for maintenance purposes.
                         </p>
                     </div>
                 </div>
@@ -195,9 +241,12 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Follow Regulatory
+                            Compliances</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Professionals who specialize in pharmaceutical transportation have the necessary knowledge
+                            and experience to effectively comply with all the regulations related to loading, storage,
+                            and delivery of pharma products through Emirates medical pharma shipment services.
                         </p>
                     </div>
                 </div>
@@ -205,9 +254,12 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Agile Delivery Choices</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Due to the customized nature of pharmaceutical products, it is important to be able to adapt
+                            quickly to contain different types of shipments and deliveries. By working with a team of
+                            specialists, you can ensure that you have the necessary tools and capabilities for a smooth
+                            transition between various pharmaceutical needs to maintain high-quality standards.
                         </p>
                     </div>
                 </div>
@@ -218,23 +270,20 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Ensuring Safety
+                            Norms</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Pharmaceutical products are fragile and costly. Products like glass tubes are easily
+                            vulnerable to cracking or breaking in case of mishandling. Therefore, it is necessary to
+                            have a skilled professional involved in the loading, transportation, and unloading of these
+                            goods to ensure their safety.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
-                        <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
-            </div>
+            
+            <div class="col-xl-4 col-lg-4 col-md-0 col-sm-0 col-0 animate fadeInUp"></div>
+
         </div>
     </section>
 
